# archbench-cli

./: README.md  pyproject.toml
archbench/: cli.py  constants.py
archbench/harness/: grading.py  llm_judge.py  run_evaluation.py
archbench/inference/: run_inference.py
archbench/tasks/: __init__.py
archbench/tasks/diagram/: __init__.py  dataset.py  grading.py  prompts.py
